--- a/style.css
+++ b/style.css
@@ -147,6 +147,10 @@ body {
   }
 }
 
+/* glass */
+
+
+
 img{
   width: 250px;
   position: absolute;
@@ -160,7 +164,10 @@ img{
   background-size: 10px;
 }
 
-.glass{  
+
+.glass{
+  
+  
   position: relative;
   width: 300px;
   height: 300px;
@@ -173,6 +180,11 @@ img{
   backdrop-filter: blur(6px);
   overflow: hidden;
 }
+
+
+
+/* button */
+
 
 .claim a{
   position: absolute;
@@ -218,6 +230,11 @@ img{
   font-size: 13.5px;
   
 }
+
+
+
+/* Input Text Field Style */
+
 
 .inputBox{
   position: absolute;
@@ -283,6 +300,10 @@ img{
   
 }
 
+
+/* text */
+
+
 .text-p{
   margin-top: 20px;
   margin-bottom: 20px;
@@ -307,6 +328,10 @@ img{
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+
+/* banner ad */
+
 
 .banner-ad{
   width: 320px;
